完成本次项目

--- a/AdminUI/Views/AdminUser/List.cshtml
+++ b/AdminUI/Views/AdminUser/List.cshtml
@@ -6,14 +6,14 @@
 <div class="ok-body">
     <!--模糊搜索区域-->
     <div class="layui-row">
-        <form class="layui-form layui-col-md12 ok-search">
+        @*<form class="layui-form layui-col-md12 ok-search">
             <input class="layui-input" placeholder="开始日期" autocomplete="off" id="startTime" name="startTime">
             <input class="layui-input" placeholder="截止日期" autocomplete="off" id="endTime" name="endTime">
             <input class="layui-input" placeholder="账号" autocomplete="off" name="username">
             <button class="layui-btn" lay-submit="" lay-filter="search">
                 <i class="layui-icon">&#xe615;</i>
             </button>
-        </form>
+        </form>*@
     </div>
     <!--数据表格-->
     <table class="layui-hide" id="tableId" lay-filter="tableFilter"></table>
@@ -55,7 +55,7 @@
 				{title: "操作", width: 100, align: "center", fixed: "right", templet: "#operationTpl"}
 			]],
 			done: function (res, curr, count) {
-				console.info(res, curr, count);
+				//console.info(res, curr, count);
 			}
 		});
 
