--- a/AdminUI/Views/Permission/AddPermission.cshtml
+++ b/AdminUI/Views/Permission/AddPermission.cshtml
@@ -50,7 +50,7 @@
 				}, {
 					"title": "角色管理",
 					"spread": true,
-					"children": [{"title": "添加角色"}, {"title": "编辑角色"}, {"title": "删除角色"}]
+					"children": [{"title": "添加权限项"}, {"title": "编辑角色"}, {"title": "删除角色"}]
 				}, {
 					"title": "权限管理",
 					"spread": true,
