--- a/AdminUI/Views/Main/Index.cshtml
+++ b/AdminUI/Views/Main/Index.cshtml
@@ -7,10 +7,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>ok-admin v2.0 | 很赞的后台模版</title>
+    <title>房源后台管理系统</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="keywords" content="ok-admin v2.0,ok-admin网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-    <meta name="description" content="ok-admin v2.0，顾名思义，很赞的后台模版，它是一款基于Layui框架的轻量级扁平化且完全免费开源的网站后台管理系统模板，适合中小型CMS后台系统。">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="~/css/okadmin.css">
     <link rel="stylesheet" href="~/lib/loading/okLoading.css" />
@@ -38,19 +36,9 @@
                  -->
             </ul>
             <ul class="layui-nav layui-layout-right">
-                <li class="layui-nav-item ok-input-search">
-                    <input type="text" placeholder="搜索..." class="layui-input layui-input-search" />
-                </li>
                 <li class="layui-nav-item">
                     <a class="ok-refresh" href="javascript:" title="刷新">
                         <i class="layui-icon layui-icon-refresh-3"></i>
-                    </a>
-                </li>
-                <li class="no-line layui-nav-item layui-hide-xs">
-                    <a id="notice" class="flex-vc pr10 pl10" href="javascript:">
-                        <i class="ok-icon ok-icon-notice icon-head-i" title="系统公告"></i>
-                        <span class="layui-badge-dot"></span>
-                        <cite></cite>
                     </a>
                 </li>
 
@@ -66,34 +54,6 @@
                         <i class="layui-icon layui-icon-screen-full"></i>
                     </a>
                 </li>
-
-                <li class="no-line layui-nav-item">
-                    <a href="javascript:">
-                        <img src="images/avatar.png" class="layui-nav-img">
-                        bobi
-                    </a>
-                    <dl id="userInfo" class="layui-nav-child">
-                        <dd>
-                            <a lay-id="u-1" href="javascript:" data-url="pages/member/user.html">
-                                个人中心<span class="layui-badge-dot"></span>
-                            </a>
-                        </dd>
-                        <dd><a lay-id="u-2" href="javascript:" data-url="pages/member/user-info.html">基本资料</a></dd>
-                        <dd><a lay-id="u-3" href="javascript:" data-url="pages/member/user-pwd.html">安全设置</a></dd>
-                        <dd><a lay-id="u-4" href="javascript:" id="alertSkin">皮肤动画</a></dd>
-                        <dd>
-                            <hr />
-                        </dd>
-                        <dd><a href="javascript:void(0)" id="logout">退出登录</a></dd>
-                    </dl>
-                </li>
-
-                <!-- 菜单 -->
-                <li class="layui-nav-item layui-hide-xs">
-                    <a id="okSetting" class="pr10 pl10" href="javascript:;">
-                        <i style="font-size: 18px" class="ok-icon ok-icon-moreandroid"></i>
-                    </a>
-                </li>
             </ul>
         </div>
         <!--遮罩层-->
@@ -101,51 +61,85 @@
         <!--左侧导航区域-->
         <div class="layui-side layui-side-menu okadmin-bg-20222A ok-left">
             <div class="layui-side-scroll okadmin-side">
-                <div class="okadmin-logo">ok-admin v2.0</div>
+                <div class="okadmin-logo">房源管理系统</div>
                 <div class="user-photo">
                     <a class="img" title="我的头像">
-                        <img src="images/avatar.png" class="userAvatar">
+                        <img src="~/images/logo.png" class="userAvatar">
                     </a>
-                    <p>你好！<span class="userName">bobi</span>, 欢迎登录</p>
+                    <p>你好！, 欢迎登录</p>
                 </div>
                 <!--左侧导航菜单-->
                 <ul id="navBar" class="layui-nav okadmin-nav okadmin-bg-20222A layui-nav-tree">
                     <li class="layui-nav-item layui-this">
-                        <a href="javascript:" lay-id="1" data-url="pages/console.html">
+                        <a href="javascript:" lay-id="1" data-url="@Url.Action("Console","Main")">
                             <i is-close=false class="ok-icon">&#xe654;</i>
                             控制台
                         </a>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:" lay-id="2" data-url="
+                           @Url.Action("List","AdminUser")">
+                            <i is-close=false class="ok-icon">&#xe6ff;</i>
+                            用户管理
+                        </a>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:" lay-id="3" data-url="
                            @Url.Action("List","Role")">
-                            <i is-close=false class="ok-icon">&#xe649;</i>
+                            <i is-close=false class="ok-icon">&#xe6b7;</i>
                             角色管理
                         </a>
                     </li>
                     <li class="layui-nav-item">
-                        <a href="javascript:" lay-id="3" data-url="@Url.Action("List","Permission")">
-                            <i is-close=false class="ok-icon">&#xe649;</i>
+                        <a href="javascript:" lay-id="4" data-url="@Url.Action("List","Permission")">
+                            <i is-close=false class="ok-icon">
+                                &#xe7c6;
+                            </i>
                             权限管理
                         </a>
                     </li>
                     <li class="layui-nav-item">
-                         <a class="" href="javascript:;">房源管理</a>
-                            <dl class="layui-nav-child">
+                        <a class="" href="javascript:;"><i is-close=false class="ok-icon">&#xe7d5;</i>房源管理</a>
+                        <dl class="layui-nav-child">
                             <dd>
-                            <a href="javascript:;" data-url="/House/List?typeId=11">
-                            <i is-close=false class="ok-icon">&#xe7d5;</i>
-                             整租
-                            </a>
-                             </dd>
-                               <dd>
-                               <a href="javascript:;" data-url="/House/List?typeId=11">
-                         <i is-close=false class="ok-icon">&#xe7d5;</i>
-                              合租
-                      </a>
-                </dd>
-            </dl>
-                 </li>
+                                <a href="javascript:;" lay-id="5"  data-url="/House/List?typeId=8">
+                                    <i is-close=false class="ok-icon">&#xe6cb;</i>
+                                    整租
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="javascript:;" lay-id="6" data-url="/House/List?typeId=9">
+                                    <i is-close=false class="ok-icon">&#xe6cc;</i>
+                                    合租
+                                </a>
+                            </dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a class="" href="javascript:;"><i is-close=false class="ok-icon">&#xe882;</i>地区管理</a>
+                        <dl class="layui-nav-child">
+                            <dd>
+                                <a href="javascript:;" lay-id="7" data-url="@Url.Action("List","City")">
+                                    <i is-close=false class="ok-icon">&#xe601;</i>
+                                    城市管理
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="javascript:;" lay-id="8" data-url="@Url.Action("List","Region")">
+                                    <i is-close=false class="ok-icon">&#xe606;</i>
+                                    区域管理
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="javascript:;" lay-id="9" data-url="@Url.Action("List","Community")">
+                                    <i is-close=false class="ok-icon">
+                                        &#xe6b8;
+                                    </i>
+                                    小区管理
+                                </a>
+                            </dd>
+                        </dl>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -179,7 +173,7 @@
 
                 <div id="tabContent" class="layui-tab-content ok-tab-content">
                     <div class="layui-tab-item layui-show">
-                        <iframe src='pages/console.html' frameborder="0" scrolling="yes" width="100%"
+                        <iframe src='@Url.Action("Console","Main")' frameborder="0" scrolling="yes" width="100%"
                                 height="100%"></iframe>
                     </div>
                 </div>
@@ -188,9 +182,7 @@
 
         <!--底部信息-->
         <div class="layui-footer okadmin-text-center">
-            Copyright ©2018-©2020 ok-admin v2.0 All Rights Reserved
-            <button class="layui-btn layui-btn-danger layui-btn-xs donate">捐赠作者</button>
-            <button class="layui-btn layui-btn-danger layui-btn-xs communication">QQ群交流</button>
+            Copyright ©2018-©2020
         </div>
     </div>
 
@@ -225,7 +217,7 @@
                     <td>
                         <div class="layui-form lock-form">
                             <div class="lock-head">
-                                <img src="./images/avatar.png" alt="avatar.png" />
+                                <img src="~/images/avatar.png" alt="avatar.png" />
                             </div>
                             <div class="layui-form-item">
                                 <div class="layui-col-xs8 layui-col-sm8 layui-col-md8">
