--- a/AdminUI/Views/Region/List.cshtml
+++ b/AdminUI/Views/Region/List.cshtml
@@ -128,7 +128,7 @@
     <script type="text/html" id="toolbarTpl">
         <div class="layui-btn-container">
             <button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="batchDel">批量删除</button>
-            <button class="layui-btn layui-btn-sm" lay-event="add">添加用户</button>
+            <button class="layui-btn layui-btn-sm" lay-event="add">添加区域</button>
         </div>
     </script>
     <script type="text/html" id="operationTpl">
